--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -81,7 +81,7 @@
                                     <a class="small" href="/auth/find-username1">아이디 찾기</a>
                                 </div>
                                 <div class="text-center">
-                                    <a class="small" href="/auth/find-password">비밀번호 찾기</a>
+                                    <a class="small" href="/auth/find-password1">비밀번호 찾기</a>
                                 </div>
                                 <div class="text-center">
                                     <a class="small" href="/auth/join">회원가입</a>
