--- a/src/main/resources/templates/find-username1.html
+++ b/src/main/resources/templates/find-username1.html
@@ -69,7 +69,7 @@
                 </form>
                 <hr>
                 <div class="text-center">
-                  <a class="small" href="#">비밀번호 찾기</a>
+                  <a class="small" href="/auth/find-password1">비밀번호 찾기</a>
                 </div>
                 <div class="text-center">
                   <a class="small" href="/auth/login">로그인</a>
