--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
     <!DOCTYPE HTML>
     <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>게시판</title>
+        <title>JHM BOARD</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -34,7 +34,7 @@
     <body>
     <br/>
     <br/>
-    <h1 style="text-align: center;"><a href="/">게시판</a></h1>
+    <h1 style="text-align: center;"><a href="/">JHM BOARD</a></h1>
     <div class="col-md-9 mx-auto">
         <!--로그인 기능 영역-->
         <div class="row">
