--- a/src/main/resources/templates/posts-update.html
+++ b/src/main/resources/templates/posts-update.html
@@ -23,6 +23,12 @@
         </div>
         <div class="form-group">
             <label for="content">내용</label>
+            <div>
+                <label>이미지 파일 한개 최대 용량 : 10MB</label>
+            </div>
+            <div>
+                <label>게시글 업로드 이미지 최대 용량 : 30MB</label>
+            </div>
             <textarea class="form-control h-75" id="content" th:text="${post.content}"></textarea>
             <th:block th:each="image : ${imageUrls}">
                 <img width="500" th:src="'/files/' + ${image}"/>
